--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
     "@ionic/pro": "2.0.4",
+    "angular-oauth2-oidc": "^5.0.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "videogular2": "^6.4.0",
@@ -37,7 +38,7 @@
     "@angular-devkit/schematics": "~7.2.3",
     "@angular/cli": "~7.2.3",
     "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.2",
+    "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.3.0",
     "@types/core-js": "^2.5.0",
