Added Screen Painter and stuff

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,8 @@
 {
   "name": "EliteAccess",
-  "integrations": {},
+  "integrations": {
+    "cordova": {}
+  },
   "type": "angular",
   "id": "c7555468"
 }
