--- a/package.json
+++ b/package.json
@@ -20,12 +20,19 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@ionic-native/camera": "^5.2.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/screen-orientation": "^4.20.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/stripe": "^4.20.0",
+    "@ionic-native/video-capture-plus": "^4.20.0",
     "@ionic/angular": "^4.0.0",
     "@ionic/pro": "2.0.4",
     "angular-oauth2-oidc": "^5.0.2",
+    "cordova-plugin-screen-orientation": "3.0.1",
+    "cordova-plugin-stripe": "1.5.3",
+    "cordova-plugin-video-capture-plus": "1.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "videogular2": "^6.4.0",
@@ -58,5 +65,12 @@
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "nl.x-services.plugins.videocaptureplus": {},
+      "cordova-plugin-stripe": {},
+      "cordova-plugin-screen-orientation": {}
+    }
+  }
 }
