--- a/package.json
+++ b/package.json
@@ -22,17 +22,22 @@
     "@angular/router": "^7.2.2",
     "@ionic-native/camera": "^5.2.0",
     "@ionic-native/core": "^5.0.0",
-    "@ionic-native/screen-orientation": "^4.20.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/stripe": "^4.20.0",
-    "@ionic-native/video-capture-plus": "^4.20.0",
     "@ionic/angular": "^4.0.0",
     "@ionic/pro": "2.0.4",
     "angular-oauth2-oidc": "^5.0.2",
-    "cordova-plugin-screen-orientation": "3.0.1",
+    "cordova-browser": "5.0.4",
+    "cordova-ios": "4.5.5",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^3.1.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-stripe": "1.5.3",
-    "cordova-plugin-video-capture-plus": "1.0.0",
+    "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "videogular2": "^6.4.0",
@@ -68,9 +73,17 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "nl.x-services.plugins.videocaptureplus": {},
       "cordova-plugin-stripe": {},
-      "cordova-plugin-screen-orientation": {}
-    }
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "ios",
+      "browser"
+    ]
   }
 }
