--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-stripe": "1.5.3",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-replay": "0.0.4",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "videogular2": "^6.4.0",
@@ -79,7 +80,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-replay": {}
     },
     "platforms": [
       "ios",
