--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cordova-ios": "4.5.5",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -81,7 +82,9 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-replay": {}
+      "cordova-replay": {},
+      "com.unionpay.screenrecord": {},
+      "cordova-plugin-media-capture": {}
     },
     "platforms": [
       "ios",
