--- a/package.json
+++ b/package.json
@@ -13,34 +13,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^7.2.2",
-    "@angular/core": "^7.2.2",
-    "@angular/forms": "^7.2.2",
-    "@angular/http": "^7.2.2",
-    "@angular/platform-browser": "^7.2.2",
-    "@angular/platform-browser-dynamic": "^7.2.2",
-    "@angular/router": "^7.2.2",
-    "@ionic-native/camera": "^5.2.0",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
+    "@angular/common": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
+    "@ionic-native/camera": "^5.6.1",
+    "@ionic-native/core": "^5.6.1",
+    "@ionic-native/image-picker": "^5.6.1",
+    "@ionic-native/splash-screen": "^5.6.1",
+    "@ionic-native/status-bar": "^5.6.1",
     "@ionic-native/stripe": "^4.20.0",
-    "@ionic/angular": "^4.0.0",
+    "@ionic/angular": "^4.4.2",
     "@ionic/pro": "2.0.4",
     "angular-oauth2-oidc": "^5.0.2",
+    "cordova-android": "7.1.4",
     "cordova-browser": "5.0.4",
     "cordova-ios": "4.5.5",
-    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-stripe": "1.5.3",
+    "cordova-plugin-telerik-imagepicker": "2.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-replay": "0.0.4",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.9",
+    "es6-promise-plugin": "^4.2.2",
+    "ios-sim": "^8.0.1",
     "rxjs": "~6.3.3",
     "videogular2": "^6.4.0",
     "zone.js": "~0.8.29"
@@ -51,24 +53,25 @@
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
     "@angular/cli": "~7.2.3",
-    "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "^7.2.7",
-    "@angular/language-service": "~7.2.2",
+    "@angular/compiler": "^7.2.15",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
     "@ionic/angular-toolkit": "~1.3.0",
     "@types/core-js": "^2.5.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.12.0",
+    "@types/node": "^10.12.30",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass": "^4.12.0",
     "protractor": "~5.4.0",
-    "ts-node": "~8.0.0",
+    "ts-node": "^8.0.3",
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   },
@@ -82,13 +85,15 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-replay": {},
-      "com.unionpay.screenrecord": {},
-      "cordova-plugin-media-capture": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
+      }
     },
     "platforms": [
-      "ios",
-      "browser"
+      "browser",
+      "android",
+      "ios"
     ]
   }
 }
